--- a/package.json
+++ b/package.json
@@ -9,16 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.0",
-    "@heroicons/react": "^2.1.4",
-    "next": "14.2.4",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "@lexical/code": "^0.16.1",
+    "@lexical/html": "^0.16.1",
+    "@lexical/link": "^0.16.1",
+    "@lexical/list": "^0.16.1",
+    "@lexical/react": "^0.16.1",
+    "@lexical/rich-text": "^0.16.1",
+    "@lexical/selection": "^0.16.1",
+    "@lexical/utils": "^0.16.1",
+    "@material-tailwind/react": "^2.1.9",
+    "@tinymce/tinymce-react": "^5.0.1",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
+    "@uiw/react-md-editor": "^4.0.4",
+    "@webcoder49/code-input": "^2.2.1",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "lexical": "^0.16.1",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.4"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.4",
+    "scss": "^0.2.4",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
