--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.5.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
