--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.4",
     "react": "^18",
