--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
