--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@react-email/components": "^0.0.25",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
@@ -20,7 +21,9 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^3.0.1",
     "react-hook-form": "^7.52.2",
+    "resend": "^4.0.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
